# headlines

./: .env  .gitignore  Cargo.toml  README.md
headlines/: Cargo.toml
headlines/src/: headlines.rs  main.rs
news_api/: Cargo.toml
news_api/newsapi/: Cargo.toml
news_api/newsapi/src/: lib.rs
news_api/src/: main.rs
newsapi/: Cargo.toml
newsapi/src/: lib.rs
src/: main.rs
