[package]
name = "news_api"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
newsapi = {path = "./newsapi", features = ["async"]}
dotenv = "0.15.0"
termimad = "0.14.2"
crossterm = "0.20.0"
tokio = {version="1.23.0", features= ["full"]}
